Fixed the issue with the width of last section and its center alignment.

--- a/styles.css
+++ b/styles.css
@@ -687,18 +687,22 @@ ul {
 /* -------------------- FOOTER SECTION -------------------- */
 
 #footer-section {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     padding: 10rem 0;
     background-image: url('/assets/footer-section/footer-section-image-main.jpg');
     background-position: center;
     background-size: cover;
+    text-align: center;
 }
 
 #footer-section .section-text-box > * {
     padding: 1rem 0;
+    max-width: 1100px;
 }
 
 #footer-section .section-text-box button{
+    margin-top: 2rem;
     padding: 0.5rem 2rem;
     transition: all 500ms ease-in-out;
     text-transform: uppercase;
